Fix sidebar not collapsing, not totally fixed

--- a/octoprint_gcodescriptmanager/static/less/gcodescriptmanager.less
+++ b/octoprint_gcodescriptmanager/static/less/gcodescriptmanager.less
@@ -22,7 +22,9 @@
 }
 
 #sidebar_plugin_gcodescriptmanager {
-  overflow: visible;
+  &.in{
+    overflow: visible;
+  }
 
   .gcodescriptmanager-script-enable {
     text-align: left;
